# CreditCardDefault

./: .gitignore  README.md  convert_excel.py  pyproject.toml  requirements.txt
app/: streamlit_app.py
src/: config.py  data.py  evaluate.py  features.py  models.py  predict.py  train.py  utils.py
tests/: test_smoke.py
